# rgb_3d_reconstruction

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: exe.h
scripts/: rgb_reconstruction.sh
src/: exe.cpp
src/exe/: exe.cc
